# Qauntacirc

./: .gitignore  Filemap.md  LICENSE  README.md  Readme.md  Readmereference.txt  prompt.md  pyproject.toml  version.py
agents/: Plan.md
cli/: CLIDETAILS.md  Plan.md  main.py
config/: Plan.md
core/: Plan.md
deployment/: Plan.md
docs/: Plan.md
llm/: Plan.md
math/: Plan.md
messaging/: Plan.md
monitoring/: Plan.md
proofs/: Plan.md
scripts/: Plan.md
tests/: Plan.md
tools/: Plan.md
